@@ -12,6 +12,15 @@
 	* src/core/exmpp_stream.erl, src/core/exmpp_stanza.erl: Add to_binary
 	functions.
 
+	* src/core/exmpp_jid.erl: Rename *_to_string and string_to_*
+	functions to *_to_list and list_to_* respectively, for the sake of
+	consistency with other modules. Add functions to serialize a JID as a
+	binary, instead of a list.
+
+	* src/compat/jlib.erl, src/server/exmpp_server_binding.erl,
+	src/core/exmpp_stanza.erl, src/client/exmpp_client_binding.erl,
+	testsuite/jid.erl: Update to take into account exmpp_jid API changes.
+
 2008-08-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* configure.ac: Exmpp is not installed under $prefix/lib/exmpp-X.X.X
